finished bug where menu overflowed on X axis.

--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ tr {
   .space {
     padding: 0;
     background-image: url(./assets/home/background-home-tablet.jpg);
+    overflow: hidden;
   }
   .nav-bar {
     height: 96px;
@@ -158,10 +159,15 @@ tr {
     height: 202px;
     width: 202px;
     position: absolute;
+
     bottom: 30px;
   }
 }
 @media all and (max-width: 700px) {
+  html,
+  body {
+    overflow: hidden;
+  }
   .nav-menu {
     display: none;
   }
@@ -179,6 +185,7 @@ tr {
     right: -350px;
     top: 1px;
     height: 100%;
+
     list-style: none;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(16px);
